<resources>
    <string name="app_name">Pesticide</string>
    <string name="title">PESTICIDE</string>
    <string name="cotton">COTTON</string>
    <string name="rice_p">RICE-P</string>
    <string name="rice_k">RICE-K</string>
    <string name="sugarcane">SUGARCANE</string>
    <string name="sunflower_1">SUNFLOWER-RAINFED</string>
    <string name="sunflower_2">SUNFLOWER-IRRIGATED</string>
    <string name="select">Select the crop that you have to check</string>
    <string name="cotton_selection">There are five stages involved for cotton to be harvested.There is a possibility of pest
    attack in any of those stages.To know more,click next</string>
    <string name="peanut">There are five stages involved for peanut to be harvested.There is a possibility of pest
    attack in any of those stages.To know more,click next</string>
    <string name="rice_selection">There are five stages involved for rice_p to be harvested.There is a possibility of pest
    attack in any of those stages.To know more,click next</string>
    <string name="rice_k_selection">There are five stages involved for rice_k to be harvested.There is a possibility of pest
    attack in any of those stages.To know more,click next</string>
    <string name="sugarcane_selection">There are five stages involved for sugarcane to be harvested.There is a possibility of pest
    attack in any of those stages.To know more,click next</string>
    <string name="maize">There are five stages involved for maize to be harvested.There is a possibility of pest
    attack in any of those stages.To know more,click next</string>
    <string name="wheat">There are five stages involved for wheat to be harvested.There is a possibility of pest
    attack in any of those stages.To know more,click next</string>
    <string name="proceed">PROCEED</string>
    <string name="cotton_stage">STAGES FOR COTTON</string>
    <string name="stage1">Seedling Stage</string>
    <string name="stage2">Vegetative Stage</string>
    <string name="stage3">Flowering Stage</string>
    <string name="stage4">Fruiting Stage</string>
    <string name="stage5">Harvesting Stage</string>
    <string name="Click_to_know_more">Click to know more</string>
    <string name="sample_text" >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="diagnosis">DIAGNOSIS</string>
    <string name="prevention">PREVENTIVE MEASURES</string>
    <string name="treatment">TREAT NOW</string>
</resources>
