<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Last_page"
    android:background="@color/lavender">

    <TextView
        android:id="@+id/origin"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        tools:ignore="InvalidId"

        android:layout_centerHorizontal="true"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textStyle="bold"

        android:background="@drawable/selection"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_below="@+id/origin"
        android:background="@drawable/selection"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/disease_picture"
        android:layout_width="250dp"
        android:layout_height="125dp"
        android:padding="10dp"
        android:layout_below="@id/name"
        android:background="@drawable/selection1"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/diagnosis_title"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@id/disease_picture"
        android:background="@drawable/selection"
        tools:ignore="DuplicateIds"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/diagnosis"
        android:gravity="center"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@id/diagnosis_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/selection1">

        <TextView
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:id="@+id/diagnosis"
            android:text="@string/sample_text"
            android:fontFamily="serif-monospace"
            android:textSize="20sp"
            android:textStyle="bold"

            />



    </ScrollView>

    <TextView
        android:layout_width="250dp"
        android:gravity="center"
        android:layout_height="30dp"
        android:id="@+id/preventive_title"
        android:background="@drawable/selection"
        android:layout_below="@id/diagnosis_title"
        android:layout_marginTop="170dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/prevention"
        />
    <ScrollView
        android:layout_width="350dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_height="100dp"
        android:layout_below="@id/preventive_title"
        android:background="@drawable/selection1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:id="@+id/prevention"
            android:text="@string/sample_text"
            android:fontFamily="serif-monospace"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </ScrollView>

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@id/preventive_title"
        android:layout_marginTop="120dp"
        android:text="@string/treatment"
        android:gravity="center"
        android:background="@drawable/selection1"
        android:layout_centerHorizontal="true"
        android:id="@+id/treat_now_title"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <ScrollView
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_below="@id/treat_now_title"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/selection1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:id="@+id/treat_now"
            android:text="@string/sample_text"
            android:fontFamily="serif-monospace"
            android:textSize="20sp"
            android:textStyle="bold"/>


    </ScrollView>

</RelativeLayout>