<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stages"
    android:background="@color/lavender">

    <TextView
        android:id="@+id/stage_cotton"
        android:gravity="center"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:background="@drawable/selection"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="serif-monospace"
        android:padding="4dp"
        android:text="@string/cotton_stage"
        android:textSize="25sp"
        />
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginStart="10dp"
        android:layout_below="@id/stage_cotton"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="InvalidId">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"

            android:background="@drawable/selection1"
            app:cardCornerRadius="10dp"
            tools:ignore="InvalidId">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_marginTop="5dp"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/green"
                    android:src="@drawable/ic_seedling"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="serif-monospace"
                    android:layout_marginTop="10dp"
                    android:text="@string/stage1"

                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/seedling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:padding="5dp"
                    android:textColor="#A9A9A9"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/selection1"
            app:cardCornerRadius="20dp"
            tools:ignore="InvalidId">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/coloraccent"
                    android:src="@drawable/ic_vegetative"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/stage2"
                    android:fontFamily="serif-monospace"

                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:padding="5dp"
                    android:textColor="#A9A9A9"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/layout1"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"

            android:background="@drawable/selection1"
            app:cardCornerRadius="10dp"
            tools:ignore="InvalidId">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_marginTop="5dp"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/orange"
                    android:src="@drawable/ic_flowering"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="serif-monospace"
                    android:layout_marginTop="10dp"
                    android:text="@string/stage3"

                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/flowering"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:padding="5dp"
                    android:textColor="#A9A9A9"
                    tools:ignore="DuplicateIds" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/selection1"
            app:cardCornerRadius="20dp"
            tools:ignore="InvalidId">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/blue"
                    android:src="@drawable/ic_fruiting"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/stage4"
                    android:fontFamily="serif-monospace"

                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:padding="5dp"
                    android:textColor="#A9A9A9"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_below="@id/layout2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="DuplicateIds,InvalidId">

    <androidx.cardview.widget.CardView
        android:id="@+id/card5"
        android:layout_width="160dp"
        android:layout_height="190dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"

        android:background="@drawable/selection1"
        app:cardCornerRadius="10dp"
        tools:ignore="InvalidId">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/olive"
                android:src="@drawable/ic_hervest"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="serif-monospace"
                android:layout_marginTop="10dp"
                android:text="@string/stage1"

                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/harvesting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:padding="5dp"
                android:textColor="#A9A9A9"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>


</RelativeLayout>